...
        android:onClick="stampCaption"
        android:padding="20dp"
        android:text="STAMP"
        android:visibility="invisible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gridline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_holder">

        <View
...
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/countdown_toggle"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:padding="15dp"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_clock" />

            <TextView
                android:id="@+id/countdown_time_selected"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/default_text_color"
                android:textSize="33dp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/space_remaining"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="0"
...
                android:layout_marginTop="8dp"
                android:background="@drawable/circle_background"
                android:visibility="invisible"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

            <RelativeLayout
                android:id="@+id/countdown_times"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/countdown_toggle"
                android:visibility="invisible">

                <Button
...
            android:layout_weight="1"
            android:padding="15dp"
            android:src="@drawable/ic_resolution"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:padding="15dp"
            android:src="@drawable/ic_settings_cog" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/swipe_area"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="clip_vertical|center_horizontal|center_vertical"
        android:orientation="horizontal"
        android:visibility="visible" />

    <ProgressBar
        android:id="@+id/qrProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true" />

...
        android:layout_alignParentBottom="true"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:visibility="visible">

        <ImageView
            android:id="@+id/toggle_camera"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:contentDescription="TODO"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_camera_front" />

        <ImageView
            android:id="@+id/shutter"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:src="@drawable/ic_shutter" />

        <ImageView
...
            android:layout_weight="1"
            android:contentDescription="TODO"
            android:src="@drawable/ic_burst"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/toggle_photo_video"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_weight="1"
            android:padding="@dimen/normal_margin"
            android:src="@drawable/ic_video" />

...
