...
                android:text="@string/focus_before_capture"
                app:switchPadding="@dimen/medium_margin"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_grid_line_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="@dimen/normal_margin"
            android:paddingTop="@dimen/activity_margin"
            android:paddingRight="@dimen/normal_margin"
            android:paddingBottom="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/settings_grid_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:paddingStart="@dimen/medium_margin"
                android:paddingLeft="@dimen/medium_margin"
                android:text="@string/grid_line"
                app:switchPadding="@dimen/medium_margin"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/settings_space_remaining_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="?attr/selectableItemBackground"
            android:paddingLeft="@dimen/normal_margin"
            android:paddingTop="@dimen/activity_margin"
            android:paddingRight="@dimen/normal_margin"
            android:paddingBottom="@dimen/activity_margin">

            <com.simplemobiletools.commons.views.MySwitchCompat
                android:id="@+id/settings_space_remaining"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:clickable="false"
                android:paddingStart="@dimen/medium_margin"
                android:paddingLeft="@dimen/medium_margin"
...
