...
        If you want to launch this app at pressing the hardware camera button, you might have to disable the built in Camera app in Settings -> Apps -> Camera -> Disable.

        Contains no ads or unnecessary permissions. It is fully opensource, provides customizable colors.

        This app is just one piece of a bigger series of apps. You can find the rest of them at https://www.simplemobiletools.com
    </string>
    <string name="qr_alert_title" translatable="false">QR Navigation</string>
    <string name="grid_line" translatable="false">Show grid line</string>
    <string name="space_remaining" translatable="false">Show space remaining when recording</string>
    <string name="enter_caption" translatable="false">ENTER CAPTION</string>

    <!--
        Haven't found some strings? There's more at
...
